drop JVM/clj operator start; use kotoba compile / kotoba run
Kill clojure -M:run (kotoba-code.main) including :jvm-opts
--enable-native-access=ALL-UNNAMED as operator start. :run is gone, not
leftover-jvm-run-path exit 2. Do not wrap Datalevin/LMDB JNI.

Operator start is kotoba run kotoba/main.kotoba and kotoba compile
--target wasm|web. Language pin is kotoba-lang@245493fc (green run
33620750254). Previous pin 48d7d3cb (murakumo#359) is left in history.
Default CI is kotoba-operator. Leftover JVM is workflow_dispatch only.

Co-authored-by: Jun Kawasaki <04.feasts_minded@icloud.com>